# OldI

./: .gitignore  README.md  pyproject.toml
data/annotations/: .gitignore
data/annotations/exports/20260422-215027/: manifest.json
data/annotations/exports/20260422-215027/task-3-batch_004___all_classes__3e-5_pretrain/annotations/: instances_default.json
data/annotations/exports/before_round_1/: manifest.json
data/annotations/exports/before_round_1/task-3-batch_004___all_classes__3e-5_pretrain/annotations/: instances_default.json
data/annotations/exports/before_round_2/: manifest.json
data/annotations/exports/before_round_2/task-3-batch_004___all_classes__3e-5_pretrain/annotations/: instances_default.json
data/annotations/exports/before_round_3/: manifest.json
data/annotations/exports/before_round_3/task-3-batch_004___all_classes__3e-5_pretrain/annotations/: instances_default.json
data/annotations/round_1/: train_coco.json  val_coco.json
data/annotations/round_2/: train_coco.json  val_coco.json
data/annotations/round_3/: train_coco.json  val_coco.json
src/oldi/: __init__.py  cli.py  config.py  errors.py  manifest.py
src/oldi/containers/: audiveris.Containerfile  lilypond.Containerfile
src/oldi/preprocess/: __init__.py  binarize.py  dewarp.py  pipeline.py
src/oldi/stages/: s01_ingest.py  s02_layout.py  s03_segment.py  s04_title_ocr.py  s05_omr.py  s06_validate.py  s07_render_verovio.py  s08_render_lily.py  s09_gallery.py
src/oldi/templates/: gallery.html.j2  tune.html.j2
src/oldi/util/: bbox.py  image.py  logging.py  staff.py
training/: README.md  calibrate_augment.py  classes.py  cvat_export.py  cvat_import_annotations.py  cvat_refresh_prelabels.py  cvat_setup.py  eval_layout.py  infer_layout.py  prelabel_batch.py  prepare_finetune_data.py  preview_batch.py  resize_class_head.py  tb_callbacks.py  train_layout.py  truncate_class_head.py
training/configs/: layout_finetune.yaml  layout_pretrain.yaml
training/data/: augment.py  coco_dataset.py  deepscoresv2.py  fix_dsv2_png_crcs.py
