[project]
name = "oldi"
version = "0.1.0"
description = "OMR pipeline for traditional Irish tin-whistle music from public-domain scans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10.4",
    "numpy>=1.26",
    "img2pdf>=0.5",
    "music21>=9.1",
    "verovio>=4.3",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.8",
    "sqlite-utils>=3.37",
    "jinja2>=3.1",
    "pypdf>=4.3",
    "ultralytics>=8.4.41",
    "cairosvg>=2.7",
    # Gemma 4 VLM for title OCR on Seanchló (Irish Gaelic) script
    "transformers>=5.5",
    "accelerate>=0.33",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    # Used by vendored Clarity-OMR subprocess; keep pinned in our env
    "timm>=1.0",
    "scikit-image>=0.24",
    "peft>=0.11",
    "lxml>=5.3",
    "datasets>=2.20",
    "pycocotools>=2.0",
    "albumentations>=1.4",
    "augraphy>=8.2",
    "wandb>=0.17",
    "torch>=2.11",
    "torchvision>=0.26",
    "pyyaml>=6.0.2",
    "torchmetrics>=1.9.0",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

# augraphy and ultralytics both depend on opencv-python; we force-pin the
# headless build so they share a single cv2 with transformers/albumentations.
# Installing both opencv-python and opencv-python-headless side-by-side leaves
# the cv2 import resolving to an empty namespace package.
[tool.uv]
override-dependencies = [
    "opencv-python-headless>=4.10,<5",
    "opencv-python ; sys_platform == 'never'",
]

[project.scripts]
oldi = "oldi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oldi"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
